2003-12-01  Jeffrey Stedfast  <fejj@ximian.com>

	* camel-stream-process.c (do_exec_command): Same.

	* camel-process.c (camel_process_fork): Same.

	* camel-filter-search.c (run_command): Same as below.

	* camel-filter-driver.c (pipe_to_system): Same as below.

	* camel-gpg-context.c (gpg_ctx_op_start): Use fcntl() to set
	FD_CLOEXEC on each fd rather than close()ing it. Apparently
	Linux's older pthread implementations use sockets and so this
	fouls threading up. GO LINUX! GO!

2003-12-01  Radek Doulik  <rodo@ximian.com>

	* camel-store.c (add_special_info): set SUBSCRIBED and NOINFERIORS
	flags to special folders, renamed method from
	add_vtrash_or_vjunk_info
	(camel_store_get_folder_info): call add_special_info directly

2003-11-28  Radek Doulik  <rodo@ximian.com>

	* camel-store.c (camel_store_get_folder_info): use old code from
	mail-ops to add vtrash/vjunk info

2003-11-28  David Woodhouse  <dwmw2@redhat.com>

	* providers/imap/camel-imap-provider.c: Enable GUI option for
	'custom command' connection.
	* providers/imap/camel-imap-store.c: Don't g_free strings in
	.rodata. It's considered rude.

2003-11-28  Not Zed  <NotZed@Ximian.com>

	* camel-mime-utils.c (mail_list_magic[]): Added list-unsubscribe
	header match.

2003-11-26  Not Zed  <NotZed@Ximian.com>

	* camel-smime-context.c (sm_verify_cmsg): take a stream rather
	than a part for the content.
	(sm_verify): get the content directly as a stream.

	* camel-multipart-signed.c
	(camel_multipart_signed_get_content_stream): new api to get the
	content stream which will match the signed version.

2003-11-26  JP Rosevear <jpr@ximian.com>

	* Makefile.am: make sure we always dist the smime stuff

2003-11-26  JP Rosevear  <jpr@ximian.com>

	* Makefile.am (libcamelinclude_HEADERS): conditionally compile
	s/mime support

2003-11-25  Not Zed  <NotZed@Ximian.com>

	* camel-cipher-context.c (camel_cipher_validity_envelope): change
	args to make it suit storing the validity in a tree.